kubernetes/applications/hub-central/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hub-central
  namespace: hub-central
spec:
  selector:
    app.kubernetes.io/name: hub-central
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
